# humble-manager

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  main.rs
src/api/: client.rs  humble.rs  humble_choice.rs  igdb.rs  mod.rs  steam.rs
src/config/: mod.rs  schema.rs
src/db/: migrations.rs  mod.rs  queries.rs  schema.sql
src/export/: csv.rs
src/models/: bundle.rs  choice.rs  filter.rs  key.rs  metadata.rs  mod.rs
src/sync/: coordinator.rs  worker.rs
src/tui/: app_event.rs  event.rs  mod.rs  render.rs  state.rs  terminal.rs  update.rs
src/tui/components/: detail_panel.rs  filter_bar.rs  key_table.rs  mod.rs  modal.rs  search_bar.rs  status_bar.rs
