[package]
name = "humble-manager"
version = "0.1.0"
edition = "2021"
default-run = "humble-manager"

[[bin]]
name = "humble-manager"
path = "src/main.rs"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
# async
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"

# TUI
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }

# HTTP
reqwest      = { version = "0.12", features = ["json", "cookies", "gzip"] }

# serde
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# database
rusqlite     = { version = "0.32", features = ["bundled", "chrono"] }

# time
chrono       = { version = "0.4", features = ["serde"] }

# errors / logging
thiserror         = "2"
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender  = "0.2"

# utils
fuzzy-matcher = "0.3"
csv           = "1"
directories   = "5"
uuid          = { version = "1", features = ["v4"] }
arboard       = "3"
open          = "5"
